<resources>
    <string name="app_name">NiksiPirkka</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_1">+</string>
    <string name="button_2">Add Advice</string>
    <string name="mainTitleText">Niksi Pirkka</string>
    <string name="fab_content_desc">Add new advice</string>
    <string name="showList">Advices</string>
    <string name="addAdvice">Add a new advice</string>

    <!-- Preference Titles -->
    <string name="messages_header">Settings</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="author_name">Your Name</string>
    <string name="default_category">Default selected category</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settingsBar">Niksi-Pirkka settings</string>
    <string name="category_label">Category</string>

</resources>