<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
            app:title="@string/messages_header">

        <EditTextPreference
                app:key="author_name"
                app:title="@string/author_name"
                app:useSimpleSummaryProvider="true"/>
        <ax.ha.it.aa.niksipirkka.SelectorTestPreference
                app:title="@string/default_category"
                app:key="default_category"
                />
    </PreferenceCategory>
    <PreferenceCategory
            app:title="Preference category">

        <SwitchPreferenceCompat
                app:defaultValue="false"
                app:title="Switch preference"
                app:key="switch_refresh"/>
        <SeekBarPreference
                android:defaultValue="60"
                android:key="refreshInterval"
                app:min="15"
                android:max="3600"
                app:showSeekBarValue="true"
                app:seekBarIncrement="300"
                app:dependency="switch_refresh"
        />
    </PreferenceCategory>

</PreferenceScreen>