<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.AddFragment" android:background="?attr/colorOnBackground">

    <TextView
            android:text="@string/addAdvice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mainTitle2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:textSize="30sp" android:textStyle="bold" android:textColor="?attr/colorOnPrimary"/>
    <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="122dp" app:layout_constraintTop_toBottomOf="@+id/categoryMenu"
    />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/contentData"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="45dp"
            app:layout_constraintHorizontal_bias="0.502" android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@+id/mainTitle2" android:textColor="?attr/colorOnPrimary"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/categoryMenu"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:hint="@string/category_label" app:layout_constraintTop_toBottomOf="@+id/contentData"
            android:layout_marginTop="32dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColorHint="?attr/colorOnSecondary">
        <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:backgroundTint="?attr/colorPrimary" android:textColor="?attr/colorOnSecondary"/>

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>